# graphster

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: format.yml  lint.yml  test.yml
src/: errors.rs  from_marker.rs  lib.rs  macros.rs  prelude.rs  ref_wrapper.rs
src/datatypes/: attributes.rs  key.rs  mod.rs  value.rs
src/graph/: edge.rs  mod.rs  node.rs  polars.rs
