[package]
name = "graphster"
version = "0.0.0-a5"
edition = "2021"
description = "High-performance DataGraph Library"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/graphster-dev/graphster"

[dependencies]
itertools = "0.13.0"
polars = { version = "0.40.0", optional = true }
rayon = "1.10.0"

[features]
polars = ["dep:polars"]
rayon = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
